--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,19 @@
 server {
-    add_header X-Frame-Options         "SAMEORIGIN"                      always;
-    add_header X-Content-Type-Options  "nosniff"                         always;
-    add_header X-XSS-Protection        "1; mode=block"                   always;
-    add_header Referrer-Policy         "strict-origin-when-cross-origin" always;
-    add_header Content-Security-Policy "default-src 'self';"             always;
+    # ------------------------------------------------------------
+    # SECURITY HEADERS
+    # ------------------------------------------------------------
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+    add_header Content-Security-Policy "default-src 'self'; connect-src 'self' http://localhost:8080; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data:;" always;
 
     listen 80;
 
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
-
         try_files $uri $uri/ /index.html;
     }
 
